src/app/globals.css
@import "tailwindcss";

:root {
  --background: #050505;
  --foreground: #dcdcd0; /* Bone */
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  
  --color-charcoal: #141414;
  --color-bone: #dcdcd0;
  --color-graphite: #4a4a4a;
  --color-ebony: #050505;

  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-serif: var(--font-playfair);

  @keyframes grain {
    0%,
    100% {
      transform: translate(0, 0);
    }
    10% {
      transform: translate(-5%, -10%);
    }
    20% {
      transform: translate(-15%, 5%);
    }
    30% {
      transform: translate(7%, -25%);
    }
    40% {
      transform: translate(-5%, 25%);
    }
    50% {
      transform: translate(-15%, 10%);
    }
    60% {
      transform: translate(15%, 0%);
    }
    70% {
      transform: translate(0%, 15%);
    }
    80% {
      transform: translate(3%, 35%);
    }
    90% {
      transform: translate(-10%, 10%);
    }
  }

  --animate-grain: grain 8s steps(10) infinite;
}



body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-sans);
  overflow-x: hidden;
}

@layer utilities {
  .font-serif {
    font-family: var(--font-serif);
  }
}

